--- a/.github/workflows/ImmortalWrt_master_X86-64.yml
+++ b/.github/workflows/ImmortalWrt_master_X86-64.yml
@@ -10,6 +10,8 @@ name: Build ImmortalWrt X86_64
 
 on:
   repository_dispatch:
+  schedule:
+    - cron: "0 16 * * *"
   workflow_dispatch:
     inputs:
       ssh:
