--- a/config/immortalwrt/master/.config
+++ b/config/immortalwrt/master/.config
@@ -5377,7 +5377,7 @@ CONFIG_PACKAGE_luci-lib-nixio_openssl=y
 # end of 6. Libraries
 
 CONFIG_PACKAGE_default-settings=y
-CONFIG_PACKAGE_default-settings-chn=y
+# CONFIG_PACKAGE_default-settings-chn=y
 CONFIG_PACKAGE_luci-i18n-autoreboot-zh-cn=y
 # CONFIG_PACKAGE_luci-i18n-base-ar is not set
 # CONFIG_PACKAGE_luci-i18n-base-bg is not set
